terraform/modules/mastodon/aws_internet_gateway.tf
resource "aws_internet_gateway" "mastodon" {
  vpc_id = "${aws_vpc.mastodon.id}"

  tags {
    Name = "matodon"
  }
}
